# g-management

./: .gitignore  README.md  alembic.ini  alma.py  pyproject.toml  requirements.txt  streamlit_app.py  test.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
alma/: __init__.py  alma.py  config.py  crud.py  database.py  operation_management.py  run_alma.py  setup_db.py  test.py  utils.py
alma/.streamlit/: config.toml
app/: __init__.py  config.py  crud.py  models.py
app/routes/: cash_runs.py  clients.py  home.py
app/templates/: base.html
g_management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
