[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "g-management"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask[async]>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "polars>=0.20",
    "python-dotenv>=1.0",
    "flask-wtf>=1.2",
    "wtforms>=3.1",
    "jinja2>=3.1",
    "psycopg2-binary>=2.9",   # only for Alembic offline generation
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*"]